--- a/twin_scape/Dockerfile
+++ b/twin_scape/Dockerfile
@@ -16,4 +16,4 @@ RUN pip install gunicorn
 
 EXPOSE 8001
 
-CMD sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py init_groups && gunicorn --bind 0.0.0.0:8001 twin_scape.wsgi:application"
+CMD sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py init_groups && python manage.py migrate django_celery_beat && gunicorn --bind 0.0.0.0:8001 twin_scape.wsgi:application"
