--- a/twin_scape/docker-compose.yml
+++ b/twin_scape/docker-compose.yml
@@ -40,17 +40,17 @@ services:
     env_file:
       - .env
 
-  # celery-beat:
-  #   build: .
-  #   container_name: twin_scape_celery_beat
-  #   command: celery -A twin_scape beat --loglevel=info
-  #   volumes:
-  #     - .:/workspace
-  #   depends_on:
-  #     - web
-  #     - redis
-  #   env_file:
-  #     - .env
+  celery-beat:
+    build: .
+    container_name: twin_scape_celery_beat
+    command: celery -A twin_scape beat --loglevel=info
+    volumes:
+      - .:/workspace
+    depends_on:
+      - web
+      - redis
+    env_file:
+      - .env
 
   redis:
     image: redis:7
@@ -94,16 +94,16 @@ services:
       /usr/bin/mc policy set none myminio/lessons-media;
       "
     
-  full_gaussian_pipe:
-    image: atermoros/nerfstudio-mast3r:latest
-    container_name: full_gaussian_pipe
-    gpus: all
-    user: root
-    shm_size: "48g"	
-    ports:
-      - "8090:8090"
-    volumes:
-      - ./full_gaussian_pipe:/workspace
+  # full_gaussian_pipe:
+  #   image: atermoros/nerfstudio-mast3r:latest
+  #   container_name: full_gaussian_pipe
+  #   gpus: all
+  #   user: root
+  #   shm_size: "48g"	
+  #   ports:
+  #     - "8090:8090"
+  #   volumes:
+  #     - ./full_gaussian_pipe:/workspace
 
 volumes:
   mysql_data_twin_scape:
